package Presentacio;

public class CtrlPresentacio {
}
